welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:19: error: type mismatch;
 found   : Unit
 required: java.awt.Color
			setCouleurBrosse(c);
                                        ^MethodsPicture:21: error: not found: value c
faireV(c);
       ^